fix overflow and extra bottom space

--- a/client/stylesheets/layout/body.css
+++ b/client/stylesheets/layout/body.css
@@ -15,11 +15,12 @@ body {
   top: 0;
   right: 0;
   left: 0;
-  bottom: 80px;
+  bottom: 0;
   overflow-y: scroll;
   max-width: 500px;
   margin: auto;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 #content-container {
@@ -27,6 +28,7 @@ body {
   height: 100%;
   overflow-y: scroll; /* has to be scroll, not auto */
   -webkit-overflow-scrolling: touch;
+  overflow-x: hidden;
 }
 
 p {
